// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Checkbox with custom testID 1`] = `
<View
  accessibilityLiveRegion="polite"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
  testID="custom:testID"
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "borderRadius": 20,
          "height": 40,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 40,
        },
        {
          "backgroundColor": "transparent",
          "opacity": 0,
        },
      ]
    }
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 2,
          "height": 18,
          "justifyContent": "center",
          "overflow": "hidden",
          "width": 18,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "borderColor": "rgba(73, 69, 79, 1)",
          "borderRadius": 2,
          "borderWidth": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderRadius": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "height": 18,
          "left": 0,
          "opacity": 1,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": 18,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "width": 18,
          }
        }
      >
        <View
          style={
            [
              {
                "borderBottomWidth": 2,
                "borderLeftWidth": 2,
                "height": 6,
                "transform": [
                  {
                    "rotate": "-45deg",
                  },
                  {
                    "translateY": -1,
                  },
                  {
                    "translateX": 1,
                  },
                ],
                "width": 11,
              },
              {
                "borderColor": "rgba(255, 255, 255, 1)",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders checked Checkbox with color 1`] = `
<View
  accessibilityLiveRegion="polite"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "borderRadius": 20,
          "height": 40,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 40,
        },
        {
          "backgroundColor": "transparent",
          "opacity": 0,
        },
      ]
    }
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 2,
          "height": 18,
          "justifyContent": "center",
          "overflow": "hidden",
          "width": 18,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "borderColor": "rgba(73, 69, 79, 1)",
          "borderRadius": 2,
          "borderWidth": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "red",
          "borderRadius": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "height": 18,
          "left": 0,
          "opacity": 1,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": 18,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "width": 18,
          }
        }
      >
        <View
          style={
            [
              {
                "borderBottomWidth": 2,
                "borderLeftWidth": 2,
                "height": 6,
                "transform": [
                  {
                    "rotate": "-45deg",
                  },
                  {
                    "translateY": -1,
                  },
                  {
                    "translateX": 1,
                  },
                ],
                "width": 11,
              },
              {
                "borderColor": "rgba(255, 255, 255, 1)",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders checked Checkbox with onPress 1`] = `
<View
  accessibilityLiveRegion="polite"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "borderRadius": 20,
          "height": 40,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 40,
        },
        {
          "backgroundColor": "transparent",
          "opacity": 0,
        },
      ]
    }
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 2,
          "height": 18,
          "justifyContent": "center",
          "overflow": "hidden",
          "width": 18,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "borderColor": "rgba(73, 69, 79, 1)",
          "borderRadius": 2,
          "borderWidth": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderRadius": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "height": 18,
          "left": 0,
          "opacity": 1,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": 18,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "width": 18,
          }
        }
      >
        <View
          style={
            [
              {
                "borderBottomWidth": 2,
                "borderLeftWidth": 2,
                "height": 6,
                "transform": [
                  {
                    "rotate": "-45deg",
                  },
                  {
                    "translateY": -1,
                  },
                  {
                    "translateX": 1,
                  },
                ],
                "width": 11,
              },
              {
                "borderColor": "rgba(255, 255, 255, 1)",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders indeterminate Checkbox 1`] = `
<View
  accessibilityLiveRegion="polite"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": "mixed",
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "borderRadius": 20,
          "height": 40,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 40,
        },
        {
          "backgroundColor": "transparent",
          "opacity": 0,
        },
      ]
    }
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 2,
          "height": 18,
          "justifyContent": "center",
          "overflow": "hidden",
          "width": 18,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "borderColor": "rgba(73, 69, 79, 1)",
          "borderRadius": 2,
          "borderWidth": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderRadius": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "height": 18,
          "left": 0,
          "opacity": 1,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": 18,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "width": 18,
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 1,
                "height": 2,
                "width": 10,
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 1)",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders indeterminate Checkbox with color 1`] = `
<View
  accessibilityLiveRegion="polite"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": "mixed",
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "borderRadius": 20,
          "height": 40,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 40,
        },
        {
          "backgroundColor": "transparent",
          "opacity": 0,
        },
      ]
    }
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 2,
          "height": 18,
          "justifyContent": "center",
          "overflow": "hidden",
          "width": 18,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "borderColor": "rgba(73, 69, 79, 1)",
          "borderRadius": 2,
          "borderWidth": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "red",
          "borderRadius": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "height": 18,
          "left": 0,
          "opacity": 1,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": 18,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "width": 18,
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 1,
                "height": 2,
                "width": 10,
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 1)",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders unchecked Checkbox with color 1`] = `
<View
  accessibilityLiveRegion="polite"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "borderRadius": 20,
          "height": 40,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 40,
        },
        {
          "backgroundColor": "transparent",
          "opacity": 0,
        },
      ]
    }
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 2,
          "height": 18,
          "justifyContent": "center",
          "overflow": "hidden",
          "width": 18,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "borderColor": "rgba(73, 69, 79, 1)",
          "borderRadius": 2,
          "borderWidth": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "red",
          "borderRadius": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "height": 18,
          "left": 0,
          "opacity": 1,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": 18,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "width": 18,
          }
        }
      >
        <View
          style={
            [
              {
                "borderBottomWidth": 2,
                "borderLeftWidth": 2,
                "height": 6,
                "transform": [
                  {
                    "rotate": "-45deg",
                  },
                  {
                    "translateY": -1,
                  },
                  {
                    "translateX": 1,
                  },
                ],
                "width": 11,
              },
              {
                "borderColor": "rgba(255, 255, 255, 1)",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders unchecked Checkbox with onPress 1`] = `
<View
  accessibilityLiveRegion="polite"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "borderRadius": 20,
          "height": 40,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 40,
        },
        {
          "backgroundColor": "transparent",
          "opacity": 0,
        },
      ]
    }
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 2,
          "height": 18,
          "justifyContent": "center",
          "overflow": "hidden",
          "width": 18,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "borderColor": "rgba(73, 69, 79, 1)",
          "borderRadius": 2,
          "borderWidth": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderRadius": 2,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "height": 18,
          "left": 0,
          "opacity": 0,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": 0,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "width": 18,
          }
        }
      >
        <View
          style={
            [
              {
                "borderBottomWidth": 2,
                "borderLeftWidth": 2,
                "height": 6,
                "transform": [
                  {
                    "rotate": "-45deg",
                  },
                  {
                    "translateY": -1,
                  },
                  {
                    "translateX": 1,
                  },
                ],
                "width": 11,
              },
              {
                "borderColor": "transparent",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
